[gd_scene load_steps=6 format=3 uid="uid://dvpp2k3jp3rwp"]

[ext_resource type="FontFile" uid="uid://b3a4aqrgrxxf8" path="res://Assets/fonts/PixelOperator8.ttf" id="1_c67be"]
[ext_resource type="Script" uid="uid://63v6ili6s2b7" path="res://Scripts/meta_upgrade_view_handler.gd" id="1_nofvu"]
[ext_resource type="Theme" uid="uid://dl8jpjtlugjva" path="res://Assets/Themes/Custom_Button_theme.tres" id="3_bjm5e"]
[ext_resource type="Texture2D" uid="uid://1ndhyix2rklb" path="res://Assets/Sprites/Player Sprites/FrogSprite1.png" id="4_4ee5i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nofvu"]
bg_color = Color(0.0235294, 0.054902, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.278431, 0.458824, 0.509804, 1)
shadow_size = 12
shadow_offset = Vector2(0, 5)

[node name="Upgrade_View" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nofvu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nofvu")

[node name="FrogCoinLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 164.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("1_c67be")
text = "Frogcoins: 0"

[node name="Menu_Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -50.0
offset_right = 210.0
offset_bottom = -10.0
grow_vertical = 0
theme = ExtResource("3_bjm5e")
text = "Back to Menu"

[node name="UpgradeButtonBase" type="Button" parent="Panel"]
layout_mode = 0
offset_left = -247.0
offset_top = -165.0
offset_right = -179.0
offset_bottom = -97.0
theme = ExtResource("3_bjm5e")
text = "0/5"
icon = ExtResource("4_4ee5i")
icon_alignment = 1

[node name="DamageUpgrade" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -264.0
offset_top = 166.0
offset_right = -196.0
offset_bottom = 234.0
grow_horizontal = 2
theme = ExtResource("3_bjm5e")
text = "0/5"
icon = ExtResource("4_4ee5i")
icon_alignment = 1

[node name="Upgrade name" type="Label" parent="Panel/DamageUpgrade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = 4.0
offset_right = 77.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_c67be")
text = "Damage"
horizontal_alignment = 1
vertical_alignment = 1

[node name="XpUpgrade" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 94.0
offset_top = -127.0
offset_right = 162.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_bjm5e")
text = "0/5"
icon = ExtResource("4_4ee5i")
icon_alignment = 1

[node name="Upgrade name" type="Label" parent="Panel/XpUpgrade"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.0
offset_top = 5.0
offset_right = 77.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_c67be")
text = "Xp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Debug" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -554.0
offset_top = 39.0
offset_right = -480.0
offset_bottom = 107.0
grow_horizontal = 2
theme = ExtResource("3_bjm5e")
text = "Debug"
icon = ExtResource("4_4ee5i")
icon_alignment = 1

[connection signal="pressed" from="Panel/Menu_Button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/DamageUpgrade" to="." method="_on_damage_upgrade_pressed"]
[connection signal="pressed" from="Panel/XpUpgrade" to="." method="_on_xp_upgrade_pressed"]
[connection signal="pressed" from="Panel/Debug" to="." method="_on_debug_pressed"]
